kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: matka
  labels:
    name: matka
