kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: matka
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: saurav547/kalyandpboss-backend-admin-prod:v1.3
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "500Mi"
              cpu: "400m"
            requests:
              memory: "200Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: matka
spec:
  type: NodePort   
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      nodePort: 31100
