kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: matka
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000        # Service port inside the cluster
    targetPort: 3000   # Port on the nginx container
    nodePort: 31000  # Port accessible outside the cluster (must be in range 30000-32767)
  type: NodePort
