kubernetes/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: matka-frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80         # Exposing on standard HTTP port
    targetPort: 3000 # Forwarding to frontend container
  type: LoadBalancer
