kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: matka
  labels:
    app: frontend
spec:
  replicas: 2  # HPA will handle scaling
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: saurav547/matka-frontend:v1.4
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "1000m"      # Minimum guaranteed CPU
              memory: "1.2Gi"  # Minimum guaranteed RAM
            limits:
              cpu: "1200m"      # Max CPU per pod
              memory: "1.5Gi"  # Max RAM per pod

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: matka
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 31000
