kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matka-ingress
  namespace: matka
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.kalyandpboss.shop
    - api.kalyandpboss.shop
    - mongodb.kalyandpboss.shop
    secretName: matka-tls-secret
  rules:
  - host: www.kalyandpboss.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

  - host: api.kalyandpboss.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5001

  - host: mongodb.kalyandpboss.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb-service
            port:
              number: 27017
